--- a/v8/frontend/public/locales/fr/translation.json
+++ b/v8/frontend/public/locales/fr/translation.json
@@ -15,7 +15,7 @@
     "documentPartageGroupeGroupe": "Groupe",
     "documentPartageGroupeDateShare": "Date share",
     "documentPartageGroupeAccessShare": "Access share",
-    "etatUtilisateur": "EtatUtilisateur",
+    "etatUtilisateur": "L'état de l'utilisateur",
     "etatUtilisateurTabPan": "Etat utilisateur",
     "etatUtilisateurHeader": "Liste des etat utilisateurs",
     "etatUtilisateurCode": "Code",
